# Console

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/include/lodepng/: lodepng.c
lodepng/: lodepng.c  lodepng.h
shader/: char_frag.glsl  char_geom.glsl  char_vert.glsl  texture_frag.glsl  texture_vert.glsl  tri_frag.glsl  tri_vert.glsl
src/: assert_s.h  character.c  character.h  colour.c  colour.h  gltools.c  gltools.h  logging.c  logging.h  main.c  maths.h  memory_s.c  memory_s.h  renderer.c  renderer.h  vec.h  window.c  window.h
